# codonanalyzer

./: .dockerignore  .gitignore  .nf-core.yml  .perlcriticrc  .perltidyrc  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CITATIONS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  Snakefile  TERMS_OF_USE.md  about.html  config.yaml  docker-compose.dev.yml  docker-compose.yml  docker_down.sh  docker_interactive.sh  docker_push.sh  docker_test_local.sh  docker_up.sh  environment.yml  index.html  main.nf  mkdocs.yml  nextflow.config  nextflow_schema.json  outputs.html  parameters.html  processes.html  pyproject.toml  (+5 more)
.github/workflows/: copilot-instructions.md  docs.yml  release.yml
about/: index.html
api/: index.html
api/codon.pl/: index.html
api/hydropathy.pl/: index.html
api/longORF.pl/: index.html
api/translate.pl/: index.html
assets/: multiqc_config.yml
changelog/: index.html
code-of-conduct/: index.html
conf/: base.config  resources.config  test.config
contributing/: index.html
docs/: about.md  changelog.md  code-of-conduct.md  contributing.md  index.md  installation.md  output.md  outputs.md  parameters.generated.md  parameters.md  pipeline-overview.md  processes.md  quickstart.md  references.md  requirements.txt  usage.md  workflow.md
docs/api/: codon.pl.md  hydropathy.pl.md  index.md  longORF.pl.md  translate.pl.md
docs/javascripts/: extra.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
installation/: index.html
lib/: Utils.groovy  WorkflowMain.groovy
output/: index.html
outputs/: index.html
parameters/: index.html
parameters.generated/: index.html
pipeline-overview/: index.html
processed_data/: Trans_Prot.txt
processes/: index.html
quickstart/: index.html
references/: index.html
scripts/: CodonAnalyzer.pl  FindLongestOrf.pl  GC_Analyzer.pl  H_Plot.pl  Snakefile  codon.pl  codon_plots.py  heatmap.sh  hydropathy.pl  longORF.pl  plot_hydro.py  translate.pl
search/: search_index.json
src/codonanalyzer/: __init__.py
supplementary/: Translating Genome_using Lab 6.pl
tests/: run_tests.sh
tests/fixtures/: test.fasta
tests/integration/: pipeline.t
tests/unit/: codon.t  hydropathy.t  longORF.t  translate.t
usage/: index.html
workflow/: index.html
