[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codonanalyzer"
version = "1.0.0"
description = "Nextflow DSL2 pipeline for codon usage analysis of DNA FASTA sequences"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Abhinav Mishra", email = "mishraabhinav36@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["bioinformatics", "nextflow", "fasta", "codon", "codon-usage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-autorefs>=1.0",
    "mkdocs-glightbox>=0.4",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-awesome-pages-plugin>=2.9",
    "mkdocs-include-markdown-plugin>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/bibymaths/codonanalyzer"
Documentation = "https://bibymaths.github.io/codonanalyzer"
Repository = "https://github.com/bibymaths/codonanalyzer"
Issues = "https://github.com/bibymaths/codonanalyzer/issues"

[tool.hatch.build]
skip-excluded-packages = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
